# imgen

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: cli.md  parameters.md
docs/models/: README.md  ideogram4.md
scripts/: setup.sh
src/imagegen/: __init__.py  caption.py  cli.py  config.py  daemon.py  jobs.py  pipeline.py  platform.py  worker.py
src/imagegen/cli/: __init__.py  actions.py  gen.py  model.py  model_cli.py  serve.py  subcommands.py
src/imagegen/engine/: base.py  factory.py  mlx_engine.py  resolution.py  torch_engine.py
src/imagegen/magic_prompt/: __init__.py  _caption_prompt.py  base.py  cli_provider.py  providers.py
src/imagegen/magic_prompt/templates/: ideogram4_caption.txt
src/imagegen/models/: __init__.py  base.py  ideogram4.py
src/imgen/: __init__.py  caption.py  config.py  daemon.py  image_output.py  jobs.py  metadata.py  pipeline.py  platform.py  worker.py
src/imgen/cli/: __init__.py  actions.py  model.py  model_cli.py
src/imgen/engine/: __init__.py  base.py  factory.py  mlx_engine.py  torch_engine.py
src/imgen/magic_prompt/: __init__.py  base.py  cli_provider.py  http_provider.py  ideogram_provider.py  providers.py
src/imgen/magic_prompt/templates/: ideogram4_caption.txt
src/imgen/models/: base.py  ideogram4.py
tests/: test_actions.py  test_caption.py  test_caption_prompt.py  test_cli.py  test_cli_provider.py  test_config.py  test_daemon.py  test_factory.py  test_http_provider.py  test_ideogram4_model.py  test_ideogram_provider.py  test_image_output.py  test_jobs.py  test_metadata.py  test_mlx_engine.py  test_models.py  test_pipeline.py  test_platform.py  test_providers.py  test_resolution.py  test_runtime.py  test_secrets.py  test_torch_engine.py  test_worker.py
