[project]
name = "imgen"
version = "0.1.0"
description = "imgen: a pluggable image-generation pipeline with a model registry and per-platform inference backends -- MLX on Apple Silicon, PyTorch/CUDA on the DGX Spark. Ideogram 4 is the first supported model."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pillow>=10.0",
  "click>=8.1",
]

[project.optional-dependencies]
# Apple Silicon (Mac dev/test): MLX backend via mflux.
# Pinned to the (currently unmerged) Ideogram-4 mlx-forge loader branch.
mlx = [
  "mflux>=0.18.0",
]
# CUDA (DGX Spark prod): PyTorch reference pipeline + official ideogram4 package.
cuda = [
  "torch>=2.11",
  "transformers>=4.49.0",
  "accelerate>=1.0.0",
  "safetensors>=0.4.5",
  "einops>=0.7.0",
  "sentencepiece",
  "bitsandbytes>=0.49.2",
  "ideogram-4 @ git+https://github.com/ideogram-oss/ideogram4.git@main",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
ig = "imgen.cli:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Allow git/URL ("direct reference") deps in the mlx/cuda extras (mflux, ideogram-4).
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/imgen"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
# Import the package from src/ directly, so tests run against the working tree
# regardless of how (or whether) the package is installed in the venv.
pythonpath = ["src"]
markers = [
  "integration: requires real weights + backend deps (deselect with -m 'not integration')",
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
files = ["src", "tests"]
strict = true
show_error_codes = true
warn_unused_ignores = true

# Tests are checked for real type bugs but not forced to annotate every
# fixture / fake / monkeypatch helper.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
implicit_reexport = true

# Untyped / platform-only third-party deps (no stubs, and the CUDA-only deps
# are not installed on the Mac dev box). Both bare and wildcard forms so the
# top-level `import torch` and the `from mflux.x import y` paths are both covered.
[[tool.mypy.overrides]]
module = [
  "mflux", "mflux.*",
  "mlx", "mlx.*",
  "torch", "torch.*",
  "transformers", "transformers.*",
  "accelerate", "accelerate.*",
  "safetensors", "safetensors.*",
  "einops", "einops.*",
  "huggingface_hub", "huggingface_hub.*",
  "ideogram4", "ideogram4.*",
]
ignore_missing_imports = true
